[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yash-honda-backend"
version = "0.1.0"
description = "Backend foundation for the Yash Honda quote generation platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "uvicorn>=0.30.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "alembic>=1.14.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
